@@ -1,0 +1,5 @@
+export const sleep = (ms) => {
+	return new Promise((resolve) => {
+		setTimeout(resolve, ms);
+	});
+};
