@@ -5,5 +5,6 @@
 		"image": "./character1.png",
 		"width": 32,
 		"height": 96
-	}
+	},
+	"actionPoints": 30
 }
