@@ -1,0 +1,6 @@
+import { sleep } from '../../common/utils/general';
+
+// this is entry point for enemy battle code
+export default function() {
+	return sleep(400);
+};
